--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+    compileSdkVersion 29
 
     lintOptions {
         abortOnError false
@@ -10,8 +9,10 @@ android {
 
     defaultConfig {
         applicationId "net.steamcrafted.gesturetrackerlib"
-        minSdkVersion 9
-        targetSdkVersion 25
+
+        minSdkVersion 14
+        targetSdkVersion 29
+
         versionCode 1
         versionName "1.0"
     }
@@ -24,8 +25,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':loadtoast')
-//    compile 'net.steamcrafted:load-toast:1.0.10'
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    api project(':loadtoast')
+    implementation 'androidx.appcompat:appcompat:1.2.0'
 }
