--- a/loadtoast/build.gradle
+++ b/loadtoast/build.gradle
@@ -1,20 +1,23 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.jfrog.bintray'
 
-ext {
-    PUBLISH_GROUP_ID = 'net.steamcrafted'
-    PUBLISH_ARTIFACT_ID = 'load-toast'
-    PUBLISH_VERSION = '1.0.12'
-}
+version = "1.1.1"
+group = "com.mohsenoid.load-toast"
+
+def siteUrl = "http://mohsenoid.com/load-toast"
+def gitUrl = "https://github.com/mohsenoid/load-toast.git"
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
+    resourcePrefix "loadtoast__"
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 29
+        targetSdkVersion 30
 
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "1.1.1"
     }
     buildTypes {
         release {
@@ -29,7 +32,90 @@ android {
 
 }
 
-//apply from: 'https://raw.githubusercontent.com/ArthurHub/release-android-library/master/android-release-aar.gradle'
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
+bintray {
+    user = properties.getProperty("bintray.user")
+    key = properties.getProperty("bintray.apikey")
+
+    configurations = ['archives']
+    pkg {
+        repo = "maven"
+        name = "load-toast"
+        websiteUrl = siteUrl
+        vcsUrl = gitUrl
+        licenses = ["Apache-2.0"]
+        publish = true
+    }
+}
+
+install {
+    repositories.mavenInstaller {
+        // This generates POM.xml with proper parameters
+        pom {
+            project {
+                packaging 'aar'
+
+                // Add your description here
+                name 'The default toasts are ugly and don\'t really provide much more than a short message.\n' +
+                        'This small library provides a better toast which will give the user feedback by morphing into a checkmark or cross (success and fail).\n' +
+                        'The lifetime of the toast is completely controlled by you.'
+
+                url siteUrl
+
+                // Set your license
+                licenses {
+                    license {
+                        name 'The MIT License (MIT)'
+                        url 'https://opensource.org/licenses/MIT'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'mmirhoseini'
+                        name 'Mohsen Mirhoseini Argi'
+                        email 'msn.mirhoseini@gmail.com'
+                    }
+                }
+
+                scm {
+                    connection gitUrl
+                    developerConnection gitUrl
+                    url siteUrl
+
+                }
+            }
+        }
+    }
+}
+
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+
+task javadoc(type: Javadoc) {
+    source = android.sourceSets.main.java.srcDirs
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives javadocJar
+    archives sourcesJar
+}
+
+task findConventions {
+    doLast {
+        println project.getConvention()
+    }
+}
 
 dependencies {
     implementation 'com.nineoldandroids:library:2.4.0'
