--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.4.30'
+
     repositories {
         google()
         jcenter()
@@ -8,6 +10,8 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.9.17"
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.2'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
@@ -22,6 +26,8 @@ allprojects {
     tasks.withType(Javadoc).all {
         enabled = false
     }
+
+    apply plugin: 'org.jetbrains.dokka'
 }
 
 task clean(type: Delete) {
