--- a/loadtoast/build.gradle
+++ b/loadtoast/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
-version = "1.1.2"
+version = "1.1.3"
 group = "com.mohsenoid.load-toast"
 
 def siteUrl = "http://mohsenoid.com/load-toast"
@@ -17,8 +17,8 @@ android {
         minSdkVersion 14
         targetSdkVersion 30
 
-        versionCode 4
-        versionName "1.1.2"
+        versionCode 5
+        versionName "1.1.3"
     }
     buildTypes {
         release {
@@ -37,8 +37,8 @@ Properties properties = new Properties()
 properties.load(project.rootProject.file('local.properties').newDataInputStream())
 
 bintray {
-    user = properties.getProperty("bintray.user")
-    key = properties.getProperty("bintray.apikey")
+    user = "$System.env.BINTRAY_USER"
+    key = "$System.env.BINTRAY_APIKEY"
 
     configurations = ['archives']
     pkg {
@@ -75,9 +75,9 @@ install {
 
                 developers {
                     developer {
-                        id 'mmirhoseini'
-                        name 'Mohsen Mirhoseini Argi'
-                        email 'msn.mirhoseini@gmail.com'
+                        id 'mohsenoid'
+                        name 'Mohsen Mirhoseini'
+                        email 'contact@mohsenoid.com'
                     }
                 }
 
