--- a/loadtoast/build.gradle
+++ b/loadtoast/build.gradle
@@ -68,8 +68,8 @@ install {
                 // Set your license
                 licenses {
                     license {
-                        name 'The MIT License (MIT)'
-                        url 'https://opensource.org/licenses/MIT'
+                        name 'Apache License, Version 2.0'
+                        url 'https://opensource.org/licenses/Apache-2.0'
                     }
                 }
 
@@ -94,7 +94,7 @@ install {
 
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
-    classifier = 'sources'
+    archiveClassifier.set('sources')
 }
 
 task javadoc(type: Javadoc) {
@@ -103,8 +103,8 @@ task javadoc(type: Javadoc) {
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
     from javadoc.destinationDir
+    archiveClassifier.set('javadoc')
 }
 
 artifacts {
@@ -112,16 +112,9 @@ artifacts {
     archives sourcesJar
 }
 
-task findConventions {
-    doLast {
-        println project.getConvention()
-    }
-}
-
 task dokkaJavadoc(type: org.jetbrains.dokka.gradle.DokkaTask) {
     outputFormat = 'javadoc'
     outputDirectory = javadoc.destinationDir
-    inputs.dir 'src/main/kotlin'
 }
 
 javadocJar {
