--- a/load-toast/build.gradle
+++ b/load-toast/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
-version = "1.1.3"
+version = "1.1.4"
 group = "com.mohsenoid.load-toast"
 
 def siteUrl = "http://mohsenoid.com/load-toast"
@@ -17,8 +17,8 @@ android {
         minSdkVersion 14
         targetSdkVersion 30
 
-        versionCode 5
-        versionName "1.1.3"
+        versionCode 6
+        versionName version
     }
     buildTypes {
         release {
