--- a/load-toast/build.gradle
+++ b/load-toast/build.gradle
@@ -1,13 +1,14 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'com.github.dcendents.android-maven'
-apply plugin: 'com.jfrog.bintray'
+apply plugin: 'maven-publish'
+apply plugin: 'signing'
 
+group = "com.mohsenoid.${name}"
 version = "1.1.4"
-group = "com.mohsenoid.load-toast"
+description = "This small library provides a better toast which will give the user feedback by morphing into a checkmark or cross (success and fail)"
 
-def siteUrl = "http://mohsenoid.com/load-toast"
-def gitUrl = "https://github.com/mohsenoid/load-toast.git"
+def siteUrl = "http://mohsenoid.com/${name}/"
+def gitUrl = "https://github.com/mohsenoid/${name}.git"
 
 android {
     compileSdkVersion 30
@@ -39,64 +40,11 @@ android {
     }
 }
 
-Properties properties = new Properties()
-properties.load(project.rootProject.file('local.properties').newDataInputStream())
-
-bintray {
-    user = "$System.env.BINTRAY_USER"
-    key = "$System.env.BINTRAY_APIKEY"
-
-    configurations = ['archives']
-    pkg {
-        repo = "maven"
-        name = "load-toast"
-        websiteUrl = siteUrl
-        vcsUrl = gitUrl
-        licenses = ["Apache-2.0"]
-        publish = true
-    }
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.nineoldandroids:library:2.4.0'
 }
 
-install {
-    repositories.mavenInstaller {
-        // This generates POM.xml with proper parameters
-        pom {
-            project {
-                packaging 'aar'
-
-                // Add your description here
-                name 'The default toasts are ugly and don\'t really provide much more than a short message.\n' +
-                        'This small library provides a better toast which will give the user feedback by morphing into a checkmark or cross (success and fail).\n' +
-                        'The lifetime of the toast is completely controlled by you.'
-
-                url siteUrl
-
-                // Set your license
-                licenses {
-                    license {
-                        name 'Apache License, Version 2.0'
-                        url 'https://opensource.org/licenses/Apache-2.0'
-                    }
-                }
-
-                developers {
-                    developer {
-                        id 'mohsenoid'
-                        name 'Mohsen Mirhoseini'
-                        email 'contact@mohsenoid.com'
-                    }
-                }
-
-                scm {
-                    connection gitUrl
-                    developerConnection gitUrl
-                    url siteUrl
-
-                }
-            }
-        }
-    }
-}
 
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
@@ -118,16 +66,67 @@ artifacts {
     archives sourcesJar
 }
 
-task dokkaJavadoc(type: org.jetbrains.dokka.gradle.DokkaTask) {
-    outputFormat = 'javadoc'
-    outputDirectory = javadoc.destinationDir
+publishing {
+    publications {
+        aar(MavenPublication) {
+            groupId = project.group
+            artifactId = project.name
+            version = project.version
+
+            artifact("$buildDir/outputs/aar/${project.getName()}-release.aar")
+            artifact sourcesJar
+            artifact javadocJar
+
+            pom {
+                name = project.name
+                packaging = 'aar'
+                description = project.description
+                url = siteUrl
+
+                licenses {
+                    license {
+                        name = 'The Apache License, Version 2.0'
+                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        id = 'mohsenoid'
+                        name = 'Mohsen Mirhoseini'
+                        email = 'contact@mohsenoid.com'
+                    }
+                }
+                scm {
+                    connection = gitUrl
+                    developerConnection = gitUrl
+                    url = siteUrl
+                }
+            }
+        }
+    }
+
+    repositories {
+        maven {
+            // change URLs to point to your repos, e.g. http://my.org/repo
+            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2"
+            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+
+            authentication {
+                basic(BasicAuthentication) {
+                    credentials {
+                        username = "$System.env.MOHSENOID_OSSRH_USERNAME"
+                        password = "$System.env.MOHSENOID_OSSRH_PASSWORD"
+                    }
+                }
+            }
+        }
+    }
 }
 
-javadocJar {
-    dependsOn(dokkaJavadoc)
-}
+setProperty("signing.keyId", "$System.env.MOHSENOID_SIGNING_KEY_ID")
+setProperty("signing.password", "$System.env.MOHSENOID_SIGNING_PASSWORD")
 
-dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.nineoldandroids:library:2.4.0'
+signing {
+    sign publishing.publications.aar
 }
