--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,8 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
+        maven { setUrl("https://plugins.gradle.org/m2/") }
+        mavenCentral()
     }
 
     dependencies {
@@ -18,7 +19,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        maven { setUrl("https://plugins.gradle.org/m2/") }
+        mavenCentral()
     }
 
     tasks.withType(Javadoc).all {
