--- a/load-toast/build.gradle
+++ b/load-toast/build.gradle
@@ -41,7 +41,7 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'com.nineoldandroids:library:2.4.0'
 }
 
