--- a/sample-app/build.gradle
+++ b/sample-app/build.gradle
@@ -34,6 +34,6 @@ android {
 
 dependencies {
     api project(':load-toast')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.3.0'
 }
